Fix gallery issues

--- a/galleries/carousel/carousel.less
+++ b/galleries/carousel/carousel.less
@@ -127,10 +127,13 @@
     overflow: hidden;
 }
 
-.lw_gallery_carousel .bx-controls-direction a:hover,
-.lw_gallery_carousel .bx-controls-direction a:focus {
+
+.lw_gallery_carousel .bx-controls-direction a:hover {
     background: rgba(255, 255, 255, 0.9);
-    outline: none;
+}
+
+.lw_gallery_carousel .bx-controls-direction a:focus {
+    background: #fff;
 }
 
 .lw_gallery_carousel .bx-controls-direction .bx-prev {
@@ -194,7 +197,7 @@
 .lw_gallery_carousel .caption {
     margin:10px 0 !important;
     padding:0 11px !important;
-    font-size: 11px !important;
+    font-size: 11.5px !important;
 }
 
 .lw_gallery_carousel .credit {
