--- a/galleries/mini/mini.less
+++ b/galleries/mini/mini.less
@@ -26,11 +26,16 @@
     margin: -8.5% 15px 0 15px; // top offset relative to width of gallery
     padding: 11px 8px 10px 52px;
     font-family: @title-font;
-    line-height: 1.1;
+    line-height: 1.15;
     background-color: #1e376d;
     -webkit-box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.8);
     box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.8);
     color: #fff;
+    max-width: 0;
+    opacity: 0; // set size and reveal with JS
+    -webkit-transition: opacity .15s ease-in-out;
+    -o-transition: opacity .15s ease-in-out;
+    transition: opacity .15s ease-in-out;
   }
 
   .gallery-info::before { // picture icon
