Gallery arrow fix. and title fix.

--- a/galleries/carousel/carousel.less
+++ b/galleries/carousel/carousel.less
@@ -159,12 +159,12 @@
 }
 
 .lw_gallery_carousel .bx-controls-direction .bx-prev::after {
-    background-image: url('/_ingredients/themes/global/assets/images/slideshow-arrows.svg#arrow-left');
+    background-image: url('/_ingredients/themes/global/galleries/carousel/carousel-arrow-left.png');
     right: 6px;
 }
 
 .lw_gallery_carousel .bx-controls-direction .bx-next::after {
-    background-image: url('/_ingredients/themes/global/assets/images/slideshow-arrows.svg#arrow-right');
+    background-image: url('/_ingredients/themes/global/galleries/carousel/carousel-arrow-right.png');
     left: 6px;
 }
 
