--- a/galleries/mini/mini.less
+++ b/galleries/mini/mini.less
@@ -35,6 +35,7 @@
     box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.8);
     color: #fff;
     cursor: pointer;
+    text-align: left;
   }
 
   .gallery-info::before { // picture icon
