--- a/galleries/fullscreen/fullscreen.less
+++ b/galleries/fullscreen/fullscreen.less
@@ -120,6 +120,9 @@ body.fsgallery-open {
   @media only screen and (max-height:650px) {
     padding-bottom: 0;
   }
+  @media only screen and (max-height:800px) {
+    max-height: 70vh;
+  }
 
   // Gallery image
   img {
@@ -136,14 +139,11 @@ body.fsgallery-open {
     @media only screen and (max-width: 800px) {
       max-width: 60%;
     }
-
-    @media only screen and (max-height:900px) {
+    @media only screen and (max-height:1000px) {
       max-height: 450px;
     }
-
-    // small mobile landscape orientation
-    @media only screen and (max-height:650px) {
-      max-height: 100%;
+    @media only screen and (max-height:800px) {
+      max-height: 70vh;
     }
   }
 
