--- a/galleries/carousel/carousel.less
+++ b/galleries/carousel/carousel.less
@@ -25,8 +25,7 @@
   **********************************************
  */
 
-@title-font: Helvetica Neue, Helvetica, Arial, sans-serif;
-@caption-font: Helvetica Neue, Helvetica, Arial, sans-serif;
+@import "../all-custom-gallery-variables.less";   // Import custom gallery variables
 
 
 /*  Hide slider until slides load */
@@ -39,6 +38,7 @@
 }
 
 .lw_gallery_carousel #lw_gallery_carousel_title { /* use ID to override wysiwyg header settings */
+  display: @carousel-title-display;
   position: absolute;
   z-index: 99;
   margin: 0;
@@ -47,8 +47,8 @@
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.75);
   background-color: rgba(0,0,0, 0.7);
   color: #fff;
-  font-family: @title-font;
-  font-size: 1.6rem;
+  font-family: @carousel-title-font;
+  font-size: @carousel-title-font-size;
   line-height: 1.4;
   font-weight: 600;
   font-style: normal;
@@ -127,7 +127,6 @@
     overflow: hidden;
 }
 
-
 .lw_gallery_carousel .bx-controls-direction a:hover {
     background: rgba(255, 255, 255, 0.9);
 }
@@ -172,15 +171,14 @@
 /* Caption Styles
 ----------------------------*/
 .lw_gallery_carousel .figcaption {
+    display: @carousel-caption-display;
     z-index:99;
     position:absolute;
     bottom: 0;
     width:100%;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.45);
-    color: #fff;
     line-height: 1.25;
-    font-family: @caption-font;
 }
 
 .lw_gallery_carousel .figcaption a {
@@ -197,14 +195,18 @@
 .lw_gallery_carousel .caption {
     margin:10px 0 !important;
     padding:0 11px !important;
-    font-size: 11.5px !important;
+    font-family: @carousel-caption-font;
+    font-size: @carousel-caption-font-size;
+    color: @carousel-caption-color;
 }
 
 .lw_gallery_carousel .credit {
     margin:10px 0 !important;
     padding:0 11px !important;
-    font-size:10px !important;
-    color: #aaa;
+    font-family: @carousel-credit-font;
+    font-size: @carousel-credit-font-size;
+    color: @carousel-credit-color;
+    display: @carousel-credit-display;
 }
 
 .lw_gallery_carousel .caption + .credit {
