--- a/galleries/mini/mini.less
+++ b/galleries/mini/mini.less
@@ -12,7 +12,7 @@
   **********************************************
  */
 
-@title-font: Helvetica Neue, Helvetica, Arial, sans-serif;
+@import "../all-custom-gallery-variables.less";   // Import custom gallery variables
 
 
 .lw_gallery_mini {
@@ -22,18 +22,17 @@
   max-width: 100%; // IE11 bugfix
 
   .gallery-info {
+    display: @mini-label-display;
     z-index: 1; // above photos
     position: absolute; // make it absolute so we can cap the width, without JS
     left: 0;
     right: 0;
     margin: -8.5% 10px 0 15px; // top offset relative to width of gallery
     padding: 11px 8px 10px 52px;
-    font-family: @title-font;
     line-height: 1.15;
-    background-color: #1e376d;
+    background-color: @mini-label-background-color;
     -webkit-box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.8);
     box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.8);
-    color: #fff;
     cursor: pointer;
     text-align: left;
   }
@@ -54,16 +53,19 @@
   .gallery-name {
     position: relative; // contains curly arrow
     margin: 0 0 4px 0;
-    font-size: 1.8rem;
-    text-transform: uppercase;
-    color: #b2bcd4;
+    font-family: @mini-label-font;
+    font-size: @mini-label-font-size;
+    text-transform: @mini-label-text-transform;
+    font-weight: @mini-label-font-weight;
+    color: @mini-label-color;
   }
 
   .gallery-title {
     margin: 0 0 0 0;
-    font-size: 1.9rem;
-    font-weight: 200;
-    color: #fff;
+    font-family: @mini-title-font;
+    font-size: @mini-title-font-size;
+    font-weight: @mini-title-font-weight;
+    color: @mini-title-color;
   }
 
   .gallery-images.gallery-images { // increases specificity
@@ -133,5 +135,3 @@
     display: none; // hide captions until gallery is opened fullscreen
   }
 }
-
-
