Update gallery widget styles

--- a/gallery-widget.less
+++ b/gallery-widget.less
@@ -1,7 +1,8 @@
 // Styling for LiveWhale galleries widgets (not inline gallery widgets)
 
-@title-font: 'adelle', serif;
-@caption-font: goudy-old-style,serif;
+@title-font: Helvetica Neue, Helvetica, Arial, sans-serif;
+@caption-font: Helvetica Neue, Helvetica, Arial, sans-serif;
+
 
 .lw_widget_type_galleries {
   margin-top: 35px;
