Update mini gallery

--- a/galleries/mini/mini.less
+++ b/galleries/mini/mini.less
@@ -74,6 +74,10 @@
     margin: 0;
     list-style-type: none;
 
+    figure {
+      margin: 0;
+    }
+
     li:not(:first-child) { // hide all but first image
       display: none;
     }
