Update Fullscreen Gallery to prevent showing on page load

--- a/galleries/fullscreen/fullscreen.less
+++ b/galleries/fullscreen/fullscreen.less
@@ -34,9 +34,9 @@ body.fsgallery-open {
   transition: opacity 0.3s ease;
 
   &.fsgallery-open {
-    pointer-events: all; // enable mouse events on gallery
-    z-index: 9999; // place gallery above everything
-    opacity: 1;
+    pointer-events: all !important; // enable mouse events on gallery
+    z-index: 9999 !important; // place gallery above everything
+    opacity: 1 !important;
   }
 }
 
