Add figcaption element to galleries

--- a/galleries/carousel/carousel.less
+++ b/galleries/carousel/carousel.less
@@ -170,7 +170,7 @@
 
 /* Caption Styles
 ----------------------------*/
-.lw_gallery_carousel .figcaption {
+.lw_gallery_carousel figcaption {
     display: @carousel-caption-display;
     z-index:99;
     position:absolute;
@@ -181,7 +181,7 @@
     line-height: 1.25;
 }
 
-.lw_gallery_carousel .figcaption a {
+.lw_gallery_carousel figcaption a {
   color: #fff !important;
   text-decoration: underline;
 }
@@ -255,8 +255,8 @@
 /* Settings
 ----------------------------*/
 .lw_gallery_carousel .bx-pager,                          /* turn off dots by default */
-.autoplay.lw_gallery_carousel .figcaption,               /* option: turn on autoplay, captions are hidden */
-.no-captions.lw_gallery_carousel .figcaption,            /* option: turn off captions */
+.autoplay.lw_gallery_carousel figcaption,               /* option: turn on autoplay, captions are hidden */
+.no-captions.lw_gallery_carousel figcaption,            /* option: turn off captions */
 .no-arrows.lw_gallery_carousel .bx-controls-direction,   /* option: turn off arrows */
 .no-title.lw_gallery_carousel #slideshow-title           /* option: turn off title */
 {
