Add option to change background color on carousel text

--- a/galleries/all-custom-gallery-variables.less
+++ b/galleries/all-custom-gallery-variables.less
@@ -5,6 +5,9 @@
 // Carousel Gallery
 // --------------------------------------------
 
+// Carousel color
+@carousel-background-color: rgba(0, 0, 0, 0.7);
+
 // Carousel title
 @carousel-title-display: block;
 @carousel-title-font: Helvetica Neue, Helvetica, Arial, sans-serif;
