--- a/galleries/carousel/carousel.less
+++ b/galleries/carousel/carousel.less
@@ -42,10 +42,10 @@
   position: absolute;
   z-index: 99;
   margin: 0;
-  padding: 0.4em 0.5em 0.3em;
+  padding: 0.4em 0.5em 0.35em;
   text-transform: none;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.75);
-  background-color: rgba(0,0,0, 0.7);
+  background-color: @carousel-background-color;
   color: #fff;
   font-family: @carousel-title-font;
   font-size: @carousel-title-font-size;
@@ -121,7 +121,7 @@
     height: 28px;
     border-radius: 0;
     border: none;
-    webkit-appearance: none;
+    -webkit-appearance: none;
     background: rgba(255, 255, 255, 0.6);
     text-indent: -9999px;
     overflow: hidden;
@@ -177,7 +177,7 @@
     bottom: 0;
     width:100%;
     overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.45);
+    background-color: @carousel-background-color;
     line-height: 1.25;
 }
 
