Update fullscreen gallery button
Change fullscreen close button to a button element for better keyboard accessibility

--- a/galleries/fullscreen/fullscreen.less
+++ b/galleries/fullscreen/fullscreen.less
@@ -278,6 +278,8 @@ body.fsgallery-open {
   width: 25px;
   height: 25px;
   overflow: hidden;
+  background: none;
+  border: none;
 
   &:before, &:after {
     content: '';
