Cleanup JS, add aria-live polite

--- a/new-default-gallery/_ingredients/templates/resources/default-gallery/default-gallery.scss
+++ b/new-default-gallery/_ingredients/templates/resources/default-gallery/default-gallery.scss
@@ -344,9 +344,8 @@ body.lw_fsg_open {
     box-shadow: 0 0 0px 2px $focus-color;
   }
 
-  &.is-active,
   &:hover,
-  &:focus {
+  &.is-keypress, {
     background-color: $btn-bg-hover;
     border-color: $btn-hover-border-color;
     color: $btn-hover-color;
