--- a/new-default-gallery/_ingredients/templates/resources/default-gallery/default-gallery.scss
+++ b/new-default-gallery/_ingredients/templates/resources/default-gallery/default-gallery.scss
@@ -48,7 +48,7 @@ $close-btn-color-hover: darken(#aaa, 15%);
 $focus-color: #015fcc;
 
 // Loader icon colors
-$loader-color-1:           #ccc;
+$loader-color-1:           #555;
 $loader-color-2:           lighten(#aaa, 10%);
 $loader-color-3:           lighten(#aaa, 20%);
 $loader-color-4:           lighten(#aaa, 30%);
@@ -56,79 +56,72 @@ $loader-color-4:           lighten(#aaa, 30%);
 
 
 
-//  Gallery Preview
+
+
+
+//  Gallery Styles
 // -------------------------------------------------------------------
 
-.lw_gallery {
-	display: block;
-
-
-	// this element opens the fullscreen gallery 
-	.lw_gallery_preview { 
-    display: block;
-
-    &:focus-visible {
-      outline: 2px auto $focus-color;
-    }
-	}
-
-	// the first thumbnail image is the only image loaded initially
-	.lw_gallery_thumb {
-		position: relative;
-		display: block;
-    max-width: 100%;
-		width: 420px;
-		height: 420px;
-		background-size: cover;
-		background-position: center;
-
-    img {
-      max-width: 100%;
-      height: auto; // ensure image fits within container
-    }
-
-		&::after { // stacked image icon
-			z-index: 1;
-			content: '';
-			display: block;
-			position: absolute;
-			top: 5px;
-			right: 5px;
-			width: 44px;
-			height: 44px;
-			background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' %3F%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg height='512px' id='Layer_1' style='enable-background:new 0 0 512 512%3B' version='1.1' viewBox='0 0 512 512' width='512px' xml:space='preserve' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg%3E%3Cg%3E%3Cpath fill='%23fff' d='M457.6 140.2l-82.5-4l-4.8-53.8c-1-11.3-11.1-19.2-22.9-18.3L51.4 88.4c-11.8 1-20.3 10.5-19.4 21.7l21.2 235.8 c1 11.3 11.2 19.2 22.9 18.3l15-1.2l-2.4 45.8c-0.6 12.6 9.2 22.8 22.4 23.5L441.3 448c13.2 0.6 24.1-8.6 24.8-21.2L480 163.5 C480.6 151 470.7 140.8 457.6 140.2z M102.6 145.5l-7.1 134.8L78.1 305l-16-178c0-0.2 0-0.3 0-0.5s0-0.3 0-0.5 c0.5-5 4.3-9 9.5-9.4l261-21.4c5.2-0.4 9.7 3 10.5 7.9c0 0.2 0.3 0.2 0.3 0.4c0 0.1 0.3 0.2 0.3 0.4l2.7 30.8l-219-10.5 C114.2 123.8 103.2 133 102.6 145.5z M436.7 382.4l-46.7-55.3l-27.5-32.7c-2.4-2.9-6.3-5.3-10.6-5.5c-4.3-0.2-7.5 1.5-11.1 4.1 l-16.4 11.9c-3.5 2.1-6.2 3.5-9.9 3.3c-3.6-0.2-6.8-1.6-9.1-3.8c-0.8-0.8-2.3-2.2-3.5-3.4l-42.8-48.9c-3.1-3.9-8.2-6.4-13.8-6.7 c-5.7-0.3-11.2 2.1-14.8 5.6L129.4 359.8l-6.8 7.4l0.3-6.8l6.8-128.9l3.3-62.9c0-0.2 0-0.4 0-0.5c0-0.2 0-0.4 0-0.5 c1.4-5.4 6.2-9.3 11.9-9l204.2 9.8l28.7 1.4l58.3 2.8c5.8 0.3 10.3 4.7 10.4 10.2c0 0.2 0.3 0.3 0.3 0.5c0 0.2 0.3 0.3 0.3 0.5 L436.7 382.4z'/%3E%3C/g%3E%3Cpath fill='%23fff' d='M373.2 262.3c19.4 0 35.2-15.8 35.2-35.2s-15.7-35.2-35.2-35.2c-19.4 0-35.2 15.7-35.2 35.2S353.7 262.3 373.2 262.3z'/%3E%3C/g%3E%3C/svg%3E");
-			background-repeat: no-repeat;
-			background-size: contain;
-		}
-	}
-
-	// the remaining thumbnails are not loaded
-	.lw_gallery_thumbs {
-		display: none;
-	}
-}
-
-
-
-
-//  Fullscreen Gallery
-// -------------------------------------------------------------------
-
-// When the gallery is open
-body.lw_fsg_open {
-  overflow: hidden; // prevent body scrolling 
+body.lw_gallery_open {
+  overflow: hidden; // prevent body scrolling when the gallery is open
 
   // set visibility to prevent tab on interactable elements 
-  // this traps focus within the fsg modal
+  // this traps focus within the gallery modal
   * {
     visibility: hidden; 
   }
 }
 
-// Fullscreen gallery container
-.lw_fsg {
-  pointer-events: none; // prevent mouse events
-  z-index: -9999; // place gallery behind everything
+.lw_gallery {
+	display: block;
+}
+
+// the selected thumbnail image is the only image loaded initially
+.lw_gallery_thumb {
+	position: relative;
+	display: block;
+  max-width: 100%;
+	width: 420px;
+	height: 420px;
+	background-size: cover;
+	background-position: center;
+
+  img {
+    max-width: 100%; // ensure image fits within container
+    height: auto; 
+  }
+
+  // if there are multiple images, 
+  // a stacked image icon appears over the thumbnail
+  .lw_gallery--multiple &::after { 
+    z-index: 1;
+    content: '';
+    display: block;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 44px;
+    height: 44px;
+    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' %3F%3E%3C!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'%3E%3Csvg height='512px' id='Layer_1' style='enable-background:new 0 0 512 512%3B' version='1.1' viewBox='0 0 512 512' width='512px' xml:space='preserve' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg%3E%3Cg%3E%3Cpath fill='%23fff' d='M457.6 140.2l-82.5-4l-4.8-53.8c-1-11.3-11.1-19.2-22.9-18.3L51.4 88.4c-11.8 1-20.3 10.5-19.4 21.7l21.2 235.8 c1 11.3 11.2 19.2 22.9 18.3l15-1.2l-2.4 45.8c-0.6 12.6 9.2 22.8 22.4 23.5L441.3 448c13.2 0.6 24.1-8.6 24.8-21.2L480 163.5 C480.6 151 470.7 140.8 457.6 140.2z M102.6 145.5l-7.1 134.8L78.1 305l-16-178c0-0.2 0-0.3 0-0.5s0-0.3 0-0.5 c0.5-5 4.3-9 9.5-9.4l261-21.4c5.2-0.4 9.7 3 10.5 7.9c0 0.2 0.3 0.2 0.3 0.4c0 0.1 0.3 0.2 0.3 0.4l2.7 30.8l-219-10.5 C114.2 123.8 103.2 133 102.6 145.5z M436.7 382.4l-46.7-55.3l-27.5-32.7c-2.4-2.9-6.3-5.3-10.6-5.5c-4.3-0.2-7.5 1.5-11.1 4.1 l-16.4 11.9c-3.5 2.1-6.2 3.5-9.9 3.3c-3.6-0.2-6.8-1.6-9.1-3.8c-0.8-0.8-2.3-2.2-3.5-3.4l-42.8-48.9c-3.1-3.9-8.2-6.4-13.8-6.7 c-5.7-0.3-11.2 2.1-14.8 5.6L129.4 359.8l-6.8 7.4l0.3-6.8l6.8-128.9l3.3-62.9c0-0.2 0-0.4 0-0.5c0-0.2 0-0.4 0-0.5 c1.4-5.4 6.2-9.3 11.9-9l204.2 9.8l28.7 1.4l58.3 2.8c5.8 0.3 10.3 4.7 10.4 10.2c0 0.2 0.3 0.3 0.3 0.5c0 0.2 0.3 0.3 0.3 0.5 L436.7 382.4z'/%3E%3C/g%3E%3Cpath fill='%23fff' d='M373.2 262.3c19.4 0 35.2-15.8 35.2-35.2s-15.7-35.2-35.2-35.2c-19.4 0-35.2 15.7-35.2 35.2S353.7 262.3 373.2 262.3z'/%3E%3C/g%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+}
+
+// if there are multiple images, this link element 
+// wraps the thumbnail and title and opens the fullscreen gallery 
+.lw_gallery_open { 
+  display: block;
+
+  &:focus-visible {
+    outline: 2px auto $focus-color;
+  }
+}
+
+
+//  Fullscreen gallery modal, which is hidden initially
+//  full-size gallery images are loaded after the gallery is clicked
+.lw_gallery_modal {
   overflow: scroll;
   position: fixed;
   top: 0;
@@ -137,28 +130,34 @@ body.lw_fsg_open {
   left: 0;
   text-align: center;
   background-color: $background-color;
-  opacity: 0;
   -webkit-transition: opacity 0.3s ease;
   transition: opacity 0.3s ease;
+
+  &:not(.lw_gallery_open) {
+    pointer-events: none; // prevent mouse events
+    z-index: -9999; // place gallery behind everything
+    opacity: 0;
+    // visibility: hidden;
+  }
+
+  &.lw_gallery_open { 
+    pointer-events: all; // enable mouse events on gallery
+    z-index: 9999;       // place gallery above everything
+    opacity: $background-opacity;  
+    visibility: visible;   
+
+    * {
+      visibility: visible !important; // override body.lw_gallery_open *
+    }
+  }
 
   &:focus {
     outline: none; // removes outline when clicking gallery
   }
-
-  &.lw_fsg_open { // !importants are all required here
-    pointer-events: all !important; // enable mouse events on gallery
-    z-index: 9999 !important;       // place gallery above everything
-    opacity: $background-opacity !important;  
-    visibility: visible !important;   
-
-    * {
-      visibility: visible;
-    }
-  }
 }
 
 // This element fades in once images are loaded
-.lw_fsg_inner {
+.lw_gallery_modal_inner {
   padding-top: 5vh; // change title position with padding
   opacity: 0;
   -webkit-transition: opacity 0.3s ease;
@@ -174,9 +173,9 @@ body.lw_fsg_open {
 
 
 // Title
-.lw_fsg_title {
+.lw_gallery_title {
   display: inline-block; // enables clicking outside title to close
-  margin: 0; // top margin must be 0 for opacity setting on fsg modal
+  margin: 0; // top margin must be 0 for opacity setting on gallery modal
   color: $title-color;
   font-size: $title-font-size;
   font-family: $title-font;
@@ -191,7 +190,7 @@ body.lw_fsg_open {
   // }
 }
 
-.lw_fsg_images {
+.lw_gallery_slides {
 	display: block;
 	list-style-type: none;
   margin: 0;
@@ -199,7 +198,7 @@ body.lw_fsg_open {
 }
 
 // Individual image container
-.lw_fsg_image {
+.lw_gallery_slide {
   display: block;
   position: absolute;
   left: 0;
@@ -249,11 +248,11 @@ body.lw_fsg_open {
   }
 
   // Inactive images
-  &:not(.lw_fsg_selected) {
+  &:not(.lw_gallery_selected) {
     pointer-events: none;
     visibility: hidden !important; // prevents kb/sr access
     opacity: 0;
-    -webkit-transition: opacity 0.6s ease; /* transform for image fade out*/
+    -webkit-transition: opacity 0.6s ease; // image fade out
     transition: opacity 0.6s ease;
 
     * {
@@ -262,29 +261,30 @@ body.lw_fsg_open {
   }
 
   // Active image
-  &.lw_fsg_selected {
-    -webkit-transition: opacity 0.4s ease-in-out; /* transform for image fade in*/
+  &.lw_gallery_selected {
+    -webkit-transition: opacity 0.4s ease-in-out; // transform for image fade in
     -o-transition: opacity 0.4s ease-in-out;
     transition: opacity 0.4s ease-in-out;
 
-    img {
-      -webkit-transition: -webkit-transform 0.3s ease; // tranform for image shrink when gallery is closed
-      transition: -webkit-transform 0.3s ease;
-      -o-transition: -o-transform 0.3s ease;
-      transition: transform 0.3s ease;
-      transition: transform 0.3s ease, -webkit-transform 0.3s ease, -o-transform 0.3s ease;
+    img { // tranform for image shrink when gallery is closed
+      -webkit-transition: -webkit-transform 0.4s ease; 
+      transition: -webkit-transform 0.4s ease;
+      -o-transition: -o-transform 0.4s ease;
+      transition: transform 0.4s ease, -webkit-transform 0.4s ease, -o-transform 0.4s ease;
+      transition: transform 0.4s ease;
     }
+  }
 
-    &.is-closed img { // shrink current image when overlay is closed
-      -webkit-transform: scale(0);
-      -ms-transform: scale(0);
-      transform: scale(0);
-    }
+  // Shrink image when overlay opens or closes
+  .lw_gallery_modal_inner:not(.is-visible) & img { 
+    -webkit-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    transform: scale(0.9);
   }
 }
 
 // Image caption
-.lw_fsg_caption {
+.lw_gallery_slide_caption {
   display: inline-block;
   max-width: 75%;
   margin: 0 auto;
@@ -297,6 +297,10 @@ body.lw_fsg_open {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  @media only screen and (max-width: 800px) {
+    max-width: 65%;
+  }
+
   a {
     color: inherit;
     text-decoration: underline;
@@ -307,14 +311,14 @@ body.lw_fsg_open {
     }
   }
 
-  @media only screen and (max-width: 800px) {
-    max-width: 65%;
+  small { // the credit
+
   }
 }
 
 
 // Nav arrows
-.lw_fsg_nav_btn {
+.lw_gallery_nav_btn {
   z-index: 4; // above images
   position: absolute;
   display: block;
@@ -402,7 +406,7 @@ body.lw_fsg_open {
 }
 
 // Close button
-.lw_fsg_close {
+.lw_gallery_close {
   cursor: pointer; // mobile Safari does not generate click events without this
   z-index: 5; // above nav arrows
   display: block;
@@ -461,7 +465,7 @@ body.lw_fsg_open {
 
 // Loading icon
 // Copyright (c) 2017 by Kevin (http://codepen.io/I-is-kevin/pen/jqejXj)
-.lw_fsg_loader {
+.lw_gallery_loader {
   position: absolute;
   top: 50%;
   left: 48%;
@@ -472,7 +476,7 @@ body.lw_fsg_open {
   }
 }
 
-.lw_fsg_loader_line {
+.lw_gallery_loader_line {
   animation: expand 1s ease-in-out infinite;
   border-radius: 10px;
   display: inline-block;
@@ -480,25 +484,25 @@ body.lw_fsg_open {
   -ms-transform-origin: center center;
           transform-origin: center center;
   margin: 0 3px;
-  width: 3px;
+  width: 4px;
   height: 25px;
 }
 
-.lw_fsg_loader_line:nth-child(1) {
+.lw_gallery_loader_line:nth-child(1) {
   background: $loader-color-1;
 }
 
-.lw_fsg_loader_line:nth-child(2) {
+.lw_gallery_loader_line:nth-child(2) {
   animation-delay: 180ms;
   background: $loader-color-2;
 }
 
-.lw_fsg_loader_line:nth-child(3) {
+.lw_gallery_loader_line:nth-child(3) {
   animation-delay: 360ms;
   background: $loader-color-3;
 }
 
-.lw_fsg_loader_line:nth-child(4) {
+.lw_gallery_loader_line:nth-child(4) {
   animation-delay: 540ms;
   background: $loader-color-4;
 }
